perf(game-center): meet 200ms cached startup gate